# quantities-units

./: .gitignore  Makefile  README.md  pyproject.toml
data/: columns.json  index.json  split.json  table.json
data/example/pandasjson/: columns.json  records.json  values.json
notebooks/: pandasjson.ipynb
src/quantities-units/: 1_unit_prefix.ipynb  2_units.ipynb  analytics.ipynb  extract_units.py  main.py  osw_characteristic.json
src/quantities-units/notebooks/: analytics.ipynb
src/quantities-units/ontology/om2/data/: quantitykind.json
src/quantities-units/ontology/om2/sparql/: quantitykind.sparql
src/quantities-units/ontology/osl/data/: characteristics.json  composed_prefix_quantity_units.json  quantity_units.json  quantitykind.json
src/quantities-units/ontology/qudt/data/: osw_composed_quantity_units.json  osw_quantity_units.json  quantitykind.json  units.json
src/quantities-units/ontology/qudt/sparql/: quantitykind.sparql  units.sparql
src/quantities-units/ontology/wikidata/data/: quantitykind.json
src/quantities-units/ontology/wikidata/sparql/: quantitykind.sparql
src/quantities-units/utils/: file-loader.py  ontology.py  prefixes.py  sparql_wrapper.py
src/quantities_units/: .gitignore  1_unit_prefix.ipynb  main.py  modify_package.py
src/quantities_units/ontology/om2/sparql/: dimension.sparql  quantitykind.sparql
src/quantities_units/ontology/osl/data/: quantity_units.json
src/quantities_units/ontology/qudt/sparql/: dimensionvectors.sparql  (+1 more)
src/quantities_units/utils/: ontology.py  prefixes.py  sparql_wrapper.py  stdout.txt
(+1 files in other folders)
