[tool.poetry]
name = "quantities-units"
version = "0.0.1"
description = "Project to fetch quantities and units from ontologies to provide a applied data source to OSW."
authors = ["Andreas Raeder"]


[tool.poetry.dependencies]
python = "^3.11"
sparqlwrapper = "^2.0.0"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
pyspark = "^3.5.3"
osw = "^0.32.0"
deepdiff = "^8.0.1"
importlib_metadata = "*"
ucumvert = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pdoc = "^14.4.0"
pytest = "^8.2.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
